# axon

./: .gitignore  ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  cargo build --release.txt  cum rulez.txt  init_db.sql  package-lock.json  run.ps1
dashboard/: axon_ui_client.js  index.html
docs/: INTEGRATION_GUIDE.md  philosophy.md
scripts/: fix_axon.ps1  orchestrator_example.rs  orchestrator_example.rs.bak_force  quick_start.sh
src/: lib.rs  main.rs
src/ai/: mod.rs  model_router.rs  models.rs  multi_agent_router.rs  ollama.rs  patch_tree.rs  prompt_builder.rs  provider.rs  self_reflection.rs  streaming_ollama.rs  tool_json_detector.rs  tool_router.rs
src/config/: loader.rs  mod.rs  schema.rs
src/core/: doctor_bridge.rs  mod.rs  runtime.rs  shutdown.rs  state.rs  ws_bridge.rs
src/doctor/: engine.rs  mod.rs  mode.rs
src/event/: bus.rs  event.rs  mod.rs
src/memory/: auto_tool_loop.rs  mod.rs  persistent_memory.rs  tool_schema_detector.rs  vector_memory.rs
src/orchestrator/: classifier.rs  handler.rs  mod.rs  router.rs
src/rag/: chunker.rs  embedder.rs  mod.rs  search.rs  vector_store.rs
src/session/: identity.rs  mod.rs  persistence.rs
src/shell/: command.rs  mod.rs  whitelist.rs
src/telegram/: approval.rs  bot.rs  mod.rs  sender.rs
src/util/: mod.rs  time.rs
src/worker/: mod.rs  registry.rs  status.rs  worker_trait.rs
src/workers/: ai_bridge.rs  build_worker.rs  discord.rs  doctor_monitor.rs  file_watcher.rs  log_watcher.rs  mod.rs  rag_indexer.rs  telegram.rs  universal_commander.rs  (+1 more)
(+7 files in other folders)
